<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.onmobile.utils.GreatBuyzTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_ip"
        android:layout_marginLeft="5dip" />

    <EditText
        android:id="@+id/edtCurrentIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" >
    </EditText>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <com.onmobile.utils.GreatBuyzTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/new_ip"
        android:layout_marginLeft="5dip" />
    <!-- <EditText
        android:id="@+id/edtNewIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" />  -->
         <Spinner
            android:id="@+id/serverSelection"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:visibility="visible" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip" >

        <Button
            android:id="@+id/btnSubmitIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_en" />

        <Button
            android:id="@+id/btnCancelIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_en" />
    </LinearLayout>

</LinearLayout>